--- a/index.html
+++ b/index.html
@@ -328,21 +328,15 @@
         
         <div class="project-card">
           <img src="images/project1.png" alt="">
-          <h3>Demo Project 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-            saepe deserunt id vero dicta omnis porro exercitationem corporis
-            possimus provident ad quas est atque nisi accusamus quia, molestias
-            neque totam?</p>
+          <h3>Portfolio Website</h3>
+          <p>A sleek responisve Portfolio website made using HTML, CSS and JavaScript.</p>
             <div class="btn">Review Project</div>
         </div>
 
         <div class="project-card">
           <img src="images/project2.png" alt="">
-          <h3>Demo Project 2</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-            saepe deserunt id vero dicta omnis porro exercitationem corporis
-            possimus provident ad quas est atque nisi accusamus quia, molestias
-            neque totam?</p>
+          <h3>SARAH AI</h3>
+          <p>A modern web-based chatbot powered by the Dolphin3.0 Mistral 24B AI model. Features a clean, responsive interface with Markdown rendering, code highlighting, and LaTeX math support for dynamic and engaging conversations.</p>
             <div class="btn">Review Project</div>
         </div>
 
