--- a/index.html
+++ b/index.html
@@ -328,16 +328,30 @@
         
         <div class="project-card">
           <img src="images/project1.png" alt="">
-          <h3>Portfolio Website</h3>
+          <h3>Portfolio Website</h3>  
           <p>A sleek responisve Portfolio website made using HTML, CSS and JavaScript.</p>
-            <div class="btn">Review Project</div>
+            <a href="https://github.com/abhaykrdev/Portfolio-website" target="_blank" class="btn">View Repository</a>
         </div>
 
         <div class="project-card">
           <img src="images/project2.png" alt="">
           <h3>SARAH AI</h3>
           <p>A modern web-based chatbot powered by the Dolphin3.0 Mistral 24B AI model. Features a clean, responsive interface with Markdown rendering, code highlighting, and LaTeX math support for dynamic and engaging conversations.</p>
-            <div class="btn">Review Project</div>
+            <a href="https://github.com/abhaykrdev/SARAH-AI" target="_blank" class="btn">View Repository</a>
+        </div>
+
+        <div class="project-card">
+          <img src="images/project3.png" alt="">
+          <h3>Flappy Bird 2D</h3>
+          <p>A clean and modern recreation of the classic Flappy Bird game, built in Unity 2D using C#.</p>
+            <a href="https://github.com/abhaykrdev/Flappy-Bird-2D" target="_blank" class="btn">View Repository</a>
+        </div>
+
+        <div class="project-card">
+          <img src="images/project4.png" alt="">
+          <h3>Spacewar</h3>
+          <p>A modern Python arcade shooter built with Pygame inspired by the classic arcade game Space Invaders (1978). Featuring multiple enemy types, adaptive difficulty, and engaging space combat mechanics.</p>
+            <a href="https://github.com/abhaykrdev/spacewar-game" target="_blank" class="btn">View Repository</a>
         </div>
 
       </div>
